...
        let table = UITableView(frame: .zero, style: .plain)
        return table
    }()

    private let searchBar: UISearchBar = {
        let searchBar = UISearchBar(frame: .zero)
        searchBar.accessibilityIdentifier = "search_field"
        return searchBar
    }()

    private lazy var tableDataSourceDelegate: SearchTableDataSourceDelegate = {
        SearchTableDataSourceDelegate { [weak self] in
            self?.viewModel.currentLocations ?? []
...
