...
        self.navigationController?.navigationBar.backgroundColor = backgroundColor
        self.view.backgroundColor = backgroundColor
    }
    
    private func setUpView() {
        let showSearchBar = UIBarButtonItem(barButtonSystemItem: .search, target: self, action: #selector(showSeachView))
        showSearchBar.accessibilityIdentifier = "search_city"
        navigationItem.rightBarButtonItem = showSearchBar

        unitSelector.addTarget(self, action: #selector(unitValueChanged), for: .valueChanged)
        mainStack.addArrangedSubview(unitSelector)
        mainStack.addArrangedSubview(city)
        mainStack.addArrangedSubview(temperature)
...
